# portal-verkle-primitives

./: Cargo.toml  LICENSE  README.md  rustfmt.toml
.github/workflows/: conventional_commits.yml  dependencies.yml  rust.yml
data/verkle-devnet-6/beacon/: slot.0.json  slot.1.json  slot.10.json  slot.100.json  slot.1000.json  slot.101.json  slot.102.json  slot.103.json  slot.104.json  slot.105.json  slot.106.json  slot.107.json  slot.108.json  slot.109.json  slot.11.json  slot.110.json  slot.111.json  slot.112.json  slot.113.json  slot.114.json  slot.115.json  slot.116.json  slot.117.json  slot.118.json  slot.119.json  slot.12.json  slot.120.json  slot.121.json  slot.122.json  slot.123.json  slot.124.json  slot.125.json  slot.126.json  slot.127.json  slot.128.json  slot.129.json  slot.13.json  slot.130.json  slot.131.json  slot.132.json  (+959 more)
portal-bridge/: Cargo.toml
portal-bridge/src/: beacon_block_fetcher.rs  lib.rs  paths.rs  state_trie_fetcher.rs  utils.rs
portal-bridge/src/evm/: error.rs  mod.rs  verkle_evm.rs
portal-bridge/src/types/: beacon.rs  genesis.rs  mod.rs  state_write.rs  witness.rs
portal-bridge/src/verkle_trie/: error.rs  mod.rs  trie.rs  trie_printer.rs
portal-bridge/src/verkle_trie/nodes/: branch.rs  commitment.rs  leaf.rs  mod.rs
portal-bridge/testdata/: beacon.block.453.test.json
portal-verkle/: Cargo.toml
portal-verkle-bridge/: Cargo.toml
portal-verkle-bridge/src/: paths.rs  utils.rs
portal-verkle-bridge/src/types/: mod.rs
portal-verkle-bridge/src/verkle_trie/: error.rs  mod.rs
portal-verkle-bridge/src/verkle_trie/nodes/: leaf.rs
portal-verkle-bridge/testdata/: beacon.block.15.test.json  beacon.block.32100.test.json
portal-verkle-primitives/: Cargo.toml
portal-verkle-primitives/src/: constants.rs  lib.rs  stem.rs  trie_key.rs  trie_value.rs  utils.rs
portal-verkle-primitives/src/ec/: crs.rs  mod.rs  point.rs  scalar_field.rs
portal-verkle-primitives/src/msm/: multiplicator.rs
portal-verkle-primitives/src/nodes/: branch_bundle.rs  branch_fragment.rs  error.rs  leaf_bundle.rs  leaf_fragment.rs  mod.rs  node.rs
portal-verkle-primitives/src/portal/: branch_bundle.rs  branch_fragment.rs  error.rs  leaf_bundle.rs  leaf_fragment.rs  mod.rs  node.rs
portal-verkle-primitives/src/proof/: ipa.rs  lagrange_basis.rs  mod.rs  multiproof.rs  precomputed_weights.rs  prover_query.rs  transcript.rs  verifier_query.rs
portal-verkle-primitives/src/ssz/: mod.rs  sparse_vector.rs
portal-verkle-primitives/src/verkle/: error.rs  genesis_config.rs  mod.rs  storage.rs  trie.rs  trie_printer.rs
portal-verkle-primitives/src/verkle/nodes/: branch.rs  commitment.rs  leaf.rs  mod.rs  portal_branch_node_builder.rs  portal_leaf_node_builder.rs
portal-verkle-primitives/tests/: portal_node_generation.rs
portal-verkle-trie/: Cargo.toml  README.md
portal-verkle-trie/src/: constants.rs  lib.rs  utils.rs
portal-verkle-trie/src/msm/: crs.rs  mod.rs
portal-verkle-trie/src/nodes/: branch.rs  leaf.rs  mod.rs
portal-verkle-trie/src/nodes/portal/: branch_bundle.rs  branch_fragment.rs  leaf_bundle.rs  leaf_fragment.rs  mod.rs
portal-verkle-trie/src/nodes/portal/ssz/: mod.rs  nodes.rs  sparse_vector.rs
portal-verkle-trie/src/portal_nodes/: branch_bundle.rs  branch_fragment.rs  branch_higher.rs  branch_lower.rs  leaf_bundle.rs  leaf_fragment.rs  leaf_higher.rs  leaf_lower.rs  mod.rs
portal-verkle-trie/src/types/: mod.rs  stem.rs  trie_value.rs
portal-verkle/src/: constants.rs  stem.rs
portal-verkle/src/ec/: point.rs
portal-verkle/src/msm/: multiplicator.rs
portal-verkle/src/nodes/: branch_bundle.rs  branch_fragment.rs  leaf_bundle.rs  leaf_fragment.rs  mod.rs
portal-verkle/src/proof/: mod.rs
verkle-core/: Cargo.toml
verkle-core/src/: constants.rs  lib.rs  stem.rs  storage.rs  trie_key.rs  trie_value.rs  utils.rs
verkle-core/src/ec/: scalar_field.rs
verkle-core/src/msm/: crs.rs  multiplicator.rs
verkle-core/src/proof/: mod.rs
verkle-core/src/serde/: element.rs  fr.rs  mod.rs
