[package]
name = "portal-bridge"
version = "0.1.0"
edition = "2021"
description = "The binary for seeding the Verkle Trie State into Portal Network."
license = "MIT"
keywords = ["ethereum", "portal-network", "verkle"]

[dependencies]
alloy-primitives = { version = "0.7", features = ["serde", "rlp"] }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_nested_with = "0.2"
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
verkle-core = { path = "../verkle-core" }
