[package]
name = "portal-verkle-trie"
version = "0.1.0"
edition = "2021"
description = "Implementation of the Portal Network version of the Verkle trie."
license = "MIT"
readme = "README.md"
keywords = ["ethereum", "portal-network", "verkle"]

[dependencies]
alloy-primitives = { version = "0.7.3", features = ["serde", "ssz", "rand"] }
ark-ec = "0.4.2"
ark-ed-on-bls12-381-bandersnatch = "0.4.0"
ark-ff = "0.4.2"
ark-serialize = "0.4.2"
banderwagon = { git = "https://github.com/crate-crypto/rust-verkle.git", rev = "e07b17b0538fcd227c221d2388e5468417116f00", version = "0.1.0" }
derive_more = "0.99.17"
ethereum_ssz = "0.5.3"
ethereum_ssz_derive = "0.5.3"
once_cell = "1.19.0"
sha2 = "0.10.8"
ssz_types = "0.6.0"

[dev-dependencies]
anyhow = "1.0.83"
